--- a/applystyle.css
+++ b/applystyle.css
@@ -68,7 +68,7 @@ select:focus,
 textarea:focus {
     border-color: cyan;
     outline: none;
-    box-shadow: 0 0 10px rgb(93, 120, 120);
+    box-shadow: 0 0 10px cyan;
 }
 
 /* Gender & Skills Fieldset */
