--- a/indexstyles.css
+++ b/indexstyles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 header {
@@ -182,4 +183,49 @@ h1 {
 
 .buttons .primary:hover::after, .buttons .secondary:hover::after {
     width: 100%;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.9);
+    border-radius: 15px 15px 0 0;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
+}
+footer p {
+    font-size: 18px;
+    color: rgb(255, 254, 254);
+    margin: 10px 0;
+}
+
+footer a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+footer a:hover {
+    text-decoration: none;
+}
+
+.signup-btn {
+    display: inline-block;
+    padding: 12px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: black;
+    background: rgb(0, 0, 0);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.3s;
+    margin-top: 10px;
+}
+
+.signup-btn:hover {
+    background: rgb(0, 0, 0);
+    transform: translateY(-3px);
 }
